2014-05-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_graph.php: Fixed a php warning caused
	by a deprecated use of a function.

2014-05-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_graph.php,
	  include/graphs/functions_fsgraph.php: Fixed the periods
	between the dates of the open/closed tickets graph.

2014-05-07  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/setup/setup_mail.php
	  include/functions_config.php
	  include/integria_cron.php
	  operation/newsletter/address_definition.php
	  operation/newsletter/issue_definition.php
	  operation/newsletter/newsletter_definition.php: Improvements
	in newsletters.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/newsletter/issue_creation.php: Fixes and
	improvements on the TinyMCE editor. Added an option
	to enable or disable the TinyMCE editor.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/leads/lead_detail.php,
	  operation/leads/lead_pipeline.php,
	  operation/leads/lead_statistics.php: Improved the
	not owned leads filter.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/leads/lead_detail.php,
	  operation/leads/lead_pipeline.php,
	  operation/leads/lead_statistics.php: Now is possible
	to search the not owned leads only.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/integria_cron.php: Modified the function
	"run_auto_incident_close" to disable the tickets close
	if the value is empty or negative.

	* include/help/en/help_auto_incident_close.php,
	  include/help/es/help_auto_incident_close.php: Updated
	the help to explain how to disable the auto incident
	close functionality.

2014-04-30  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_detail.php: Now the page
	makes a redirect to the incident dashboard detail when
	a ticket is created, instead of loading the incident
	dashboard detail script.
