@@ -71,6 +71,7 @@ if ($update) {
 	$config["batch_newsletter"] = get_parameter ("batch_newsletter", 0);
 	$config["news_batch_newsletter"] = get_parameter ("news_batch_newsletter", 0);
 	$config["batch_email_validation"] = get_parameter ("batch_email_validation", 0);
+	$config["active_validate"] = get_parameter("active_validate", 0);
 	
 	update_config_token ("HEADER_EMAIL", $config["HEADER_EMAIL"]);
 	update_config_token ("FOOTER_EMAIL", $config["FOOTER_EMAIL"]);
@@ -93,6 +94,7 @@ if ($update) {
 	update_config_token ("batch_newsletter", $config["batch_newsletter"]);
 	update_config_token ("news_batch_newsletter", $config["news_batch_newsletter"]);
 	update_config_token ("batch_email_validation", $config["batch_email_validation"]);
+	update_config_token ("active_validate", $config["active_validate"]);
 }
 
 $table->width = '99%';
@@ -140,7 +142,9 @@ $table->data[7][0] = print_input_text ("batch_newsletter", $config["batch_newsle
 
 
 $table->data[7][0] .= print_help_tip (__("This means, in each execution of the batch external process (integria_cron). If you set your cron to execute each hour in each execution of that process will try to send this ammount of emails. If you set the cron to run each 5 min, will try this number of mails."), true);
-        
+
+$table->data[7][1] =  print_checkbox ("active_validate", 1, $config["active_validate"], true, __('Activate email validation'));
+   
 $table->colspan[8][0] = 3;
 $table->data[8][1] = "<h4>".__("POP/IMAP Parameters")."</h4>";
 
